Add project template and Blackjack card game example